--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="typing"></div>
                     <p>Someone who always wants to change to be better</p>
                     <div class="social-icons">
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/ahnafmps/" target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.tiktok.com/@so4iled_experiment" target="_blank"><i class="fab fa-tiktok"></i></a>
                         <a href="lemon8-app.com/Hachiware" target="_blank"><i class="fas fa-lemon"></i></a>
                     </div>
@@ -323,7 +323,7 @@
             <div class="footer-content">
                 <div class="footer-logo">FAN</div>
                 <div class="footer-social">
-                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/ahnafmps/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.tiktok.com/@so4iled_experiment" target="_blank"><i class="fab fa-tiktok"></i></a>
                     <a href="lemon8-app.com/Hachiware" target="_blank"><i class="fas fa-lemon"></i></a>
                 </div>
